objects/ssot__StationaryAssetWaterActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivitySourceType__c</fullName>
        <label>Activity Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CostCenterName__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EnvironmentalRiskId__c</fullName>
        <label>Environmental Risk</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Stationary Asset Water Activity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnit__c</fullName>
        <label>Quantity Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProviderId__c</fullName>
        <label>Service Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Environmental Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetWaterFtprntId__c</fullName>
        <label>Stationary Asset Water Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCostAmount__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TreatmentTypeName__c</fullName>
        <label>Treatment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WaterFtprntReportDate__c</fullName>
        <label>Water Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383818705_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetWaterActivity_Quantit_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>StationaryAssetWaterActivity_Quantit_rel</relationshipLabel>
        <relationshipName>rel_1747383818705_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383819887_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetWaterActivity_StnryAs_rel</label>
        <referenceTo>ssot__StnryAssetWaterFootprint__dlm</referenceTo>
        <relationshipLabel>StationaryAssetWaterActivity_StnryAs_rel</relationshipLabel>
        <relationshipName>rel_1747383819887_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383821758_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetWaterActivity_StnryAs_rel</label>
        <referenceTo>ssot__StationaryAssetEnvSource__dlm</referenceTo>
        <relationshipLabel>StationaryAssetWaterActivity_StnryAs_rel</relationshipLabel>
        <relationshipName>rel_1747383821758_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>